--- a/s2i-liberty/Dockerfile
+++ b/s2i-liberty/Dockerfile
@@ -2,6 +2,7 @@
 # It builds using maven and runs the resulting artifacts on WildFly 10.1.0 Final
 
 FROM websphere-liberty:webProfile8
+USER root
 MAINTAINER David Stanke <David.Stanke2@skoda-auto.cz>
 
 LABEL io.openshift.s2i.scripts-url=image:///usr/local/s2i \
