--- a/s2i-liberty/Dockerfile
+++ b/s2i-liberty/Dockerfile
@@ -36,7 +36,7 @@ COPY ./placeholder.txt $WORKDIR/artifacts
 COPY ./placeholder.txt $WORKDIR/config 
 
 WORKDIR $WORKDIR
-RUN ll $WORKDIR 
+RUN ls -1al $WORKDIR 
 
 EXPOSE $WLP_DEBUG_ADDRESS
 # EXPOSE $JOLOKIA_PORT
