--- a/s2i-liberty/Dockerfile
+++ b/s2i-liberty/Dockerfile
@@ -17,7 +17,7 @@ ENV STI_SCRIPTS_PATH="/usr/local/s2i" \
     WORKDIR="/usr/local/workdir" \
     WLP_DEBUG_ADDRESS="7777" \
     JOLOKIA_PORT="8778" \
-    ENABLE_DEBUG="false" \ 
+    ENABLE_DEBUG="true" \ 
     ENABLE_JOLOKIA="true" \
     S2I_DESTINATION="/tmp" \
     JOLOKIA_VERSION="1.3.5"
